--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+
 
     </dependencies>
 
